# SmartDataAnalyzer

./: .gitignore  .replit  LICENSE  README.md  advanced_analytics.py  app.py  column_mapper.py  data_cleaner.py  email_service.py  enhanced_pdf_generator.py  fix_app.py  fix_libs.py  growth_analytics.py  lib_finder.py  library_fix.py  main.py  minimal_app.py  minimal_routes.py  pdf_generator.py  pyproject.toml  replit.md  replit.nix  requirements.txt  routes.py  run.bat  run_app.py  start_app.py  start_server.sh  startup.py  temp_main.py  test_advanced_data.csv  test_advanced_growth.py  test_client_data.csv  test_growth_debug.py  test_growth_insights.py  wsgi.py
.github/workflows/: python-app.yml
attached_assets/: Pasted-You-are-a-senior-full-stack-SaaS-engineer-Build-me-a-complete-production-ready-Smart-Data-Analyzer-1750190481274_1750190481274.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  column_preview.html  dashboard.html  index.html
uploads/: .gitkeep  SampleData.xlsx  SampleData_processed.xlsx  sample_data.csv  sample_data.xlsx  sda_valid_sample.csv  test_growth_data.csv  test_sales.csv  test_sales_data.csv
