[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.4",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.2",
]
